<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.listeningflow.AudioResultFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:text="@string/result"
        android:textColor="@color/black_color"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"

        android:layout_width="341dp"
        android:layout_height="150dp"
        android:layout_marginTop="93dp"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tv_result">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_listened"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="45dp"
                android:layout_marginTop="23dp"
                android:text="@string/listened_in_total"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tv_listened_in_total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_listened_in_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="80dp"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_listened"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/right_answers"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_listened" />

            <TextView
                android:id="@+id/tv_amount_of_right_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_right"
                app:layout_constraintTop_toBottomOf="@id/tv_listened_in_total"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_mistakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/amount_of_mistakes"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_right" />

            <TextView
                android:id="@+id/tv_amount_of_mistakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_mistakes"
                app:layout_constraintTop_toBottomOf="@id/tv_amount_of_right_answers"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/total_time"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_mistakes" />

            <TextView
                android:id="@+id/tv_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_time"
                app:layout_constraintTop_toBottomOf="@id/tv_amount_of_mistakes"
                tools:text="@tools:sample/lorem" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_back_to_main"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/button_rectangle_gradient_background"
        android:text="@string/back_to_main"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />


</androidx.constraintlayout.widget.ConstraintLayout>