<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogs.ListeningBottomSheetDialogFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/title_card"
        style="@style/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/im_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/im_done"
                tools:text="@tools:sample/lorem" />

            <Button
                android:id="@+id/btn_have_a_rest"
                android:layout_width="133dp"
                android:layout_height="41dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="250dp"
                android:layout_marginBottom="160dp"
                android:background="@drawable/button_rectangle_gradient_background"
                android:text="@string/have_a_rest"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/im_done"

                />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="133dp"
                android:layout_height="41dp"
                android:layout_marginTop="250dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="160dp"
                android:background="@drawable/button_rectangle_gradient_background"
                android:text="@string/of_course"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/im_done" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>