<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/dp_15"
    tools:context=".fragments.listeningflow.MusicFragment">

    <TextView
        android:id="@+id/view_tree_view_model_store_owner"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:text="@string/if_i_were_a_boy_beyounce"
        android:textColor="@color/black_color"
        android:textSize="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.chibde.visualizer.BarVisualizer
        android:id="@+id/visualizerBar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_tree_view_model_store_owner"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ib_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:backgroundTint="#5AC4FD"
        app:layout_constraintTop_toBottomOf="@+id/visualizerBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/ib_stop"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginStart="145dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#5AC4FD"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/pause_audio_material"
                android:src="@drawable/ic_player_stop"
                app:layout_constraintEnd_toStartOf="@id/ib_play"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_play"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#5AC4FD"
                android:contentDescription="@string/play_audio_material"
                android:src="@drawable/ic_player_play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_understood"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#666666"
        android:text="Понял"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_card" />


</androidx.constraintlayout.widget.ConstraintLayout>