<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".fragments.listeningflow.MovieFragment">


    <TextView
        android:id="@+id/tv_film_chunk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/visualizerBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/lorem" />

    <com.chibde.visualizer.BarVisualizer
        android:id="@+id/visualizerBar"
        android:layout_width="match_parent"
        android:layout_height="240dp"

        app:layout_constraintBottom_toTopOf="@id/cardview"
        app:layout_constraintTop_toBottomOf="@id/tv_film_chunk" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="@color/end_color_gradient"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btn_stop"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginStart="145dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/end_color_gradient"
                android:contentDescription="@string/pause_audio_material"
                android:src="@drawable/ic_player_stop"
                app:layout_constraintEnd_toStartOf="@id/btn_play"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_play"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/end_color_gradient"
                android:contentDescription="@string/play_audio_material"
                android:src="@drawable/ic_player_play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_continue"
        android:layout_width="186dp"
        android:layout_height="41dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_rectangle_gradient_background"
        android:backgroundTint="#666666"
        android:text="@string/got_it"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>