<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PrivateOfficeFragment">

    <androidx.cardview.widget.CardView
        style="@style/cardStyle"
        android:id="@+id/user_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_121">

            <TextView
                android:id="@+id/user_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_9"
                android:layout_marginTop="@dimen/dp_16"
                android:textColor="@color/black_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Азамат" />

            <TextView
                android:id="@+id/enter_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_28"
                android:textColor="@color/black_color"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/user_name_tv"
                app:layout_constraintTop_toBottomOf="@id/user_name_tv"
                tools:text="Вход выполнен: 24 июля 2021" />

            <ImageView
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/dp_9"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        style="@style/cardStyle"
        android:id="@+id/statistic_card"
        app:layout_constraintTop_toBottomOf="@id/user_card"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_121">

            <TextView
                android:id="@+id/statistic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_9"
                android:layout_marginTop="@dimen/dp_16"
                android:textColor="@color/black_color"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/statistic" />

            <TextView
                android:id="@+id/words_in_dictionary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/words_in_dictionary"
                app:layout_constraintTop_toBottomOf="@id/statistic_title"
                app:layout_constraintStart_toStartOf="@id/statistic_title"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black_color"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_10"/>

            <TextView
                android:id="@+id/words_in_dictionary_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="186"
                app:layout_constraintTop_toBottomOf="@id/words_in_dictionary_title"
                app:layout_constraintStart_toStartOf="@id/words_in_dictionary_title"
                android:textStyle="bold"
                android:textColor="@color/black_color"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_6"/>

            <TextView
                android:id="@+id/score_experience_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/words_in_dictionary_title"
                android:layout_marginEnd="@dimen/dp_18"
                android:text="@string/score_experience"
                android:textColor="@color/black_color"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/score_experience_title"
                android:text="757"
                android:textStyle="bold"
                android:textColor="@color/black_color"
                android:textSize="@dimen/sp_16"
                app:layout_constraintTop_toTopOf="@id/words_in_dictionary_amount"
                app:layout_constraintEnd_toEndOf="@id/score_experience_title"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>